--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">sample_project</string>
-    <string name="weather_list">weather_list</string>
+    <string name="weather_list">weather</string>
+    <string name="search">search</string>
+
 </resources>
